fix task width on mobile/desktop

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,7 @@
 
 .task {
-    width: 400px;
+    max-width: 400px;
+    min-width: 300px;
 }
 
 .task-text {
